Testing a new setup/style for now

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^12.9.2",
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
