--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.2",
+    "motion": "^12.15.0",
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
